--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,9 +6,9 @@ services:
     image: blog_api_app
     container_name: laravel_app
     restart: unless-stopped
-    working_dir: /var/www
+    working_dir: /var/www/html
     volumes:
-      - .:/var/www
+      - .:/var/www/html
     networks:
       - laravel
     depends_on:
