--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,26 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=
+DB_PASSWORD=
+
+# Elasticsearch Configuration
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_SCHEME=
+ELASTICSEARCH_USER=
+ELASTICSEARCH_PASS=
+ELASTICSEARCH_CLOUD_ID= # <-- Set if you are using Elasticsearch Cloud
+ELASTICSEARCH_API_KEY= # <-- Set if you're using API key for authentication
+ELASTICSEARCH_SSL_VERIFICATION=true
+ELASTICSEARCH_INDEX_PREFIX= # <-- Optional: Set prefix for Elasticsearch index
+ELASTICSEARCH_TIMEOUT=60
+ELASTICSEARCH_CONNECT_TIMEOUT=10
+ELASTICSEARCH_RETRIES=2
+ELASTICSEARCH_POOL_SIZE=50
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
